fixed posts leading and dates alignment (#308)

--- a/src/assets/styles/singlePost.scss
+++ b/src/assets/styles/singlePost.scss
@@ -5,6 +5,7 @@
         & .wysiwyg {
             & * {
                 color: $dark-blue-background;
+                line-height: 1.5rem;
             }
 
             & a {
